feat: Improve Dagger module tests with new methods
- Add `{{.module_name}}()` method to create module instances
- Update `SetupDaggerInDagger` to use the new module name
- Improve docstring for `WithDaggerCLIUbuntu` method

--- a/.daggerx/templates/module/dagger.go.tmpl
+++ b/.daggerx/templates/module/dagger.go.tmpl
@@ -77,7 +77,7 @@ func (m *{{.module_name}}) WithDaggerCLIAlpine(version string) *{{.module_name}}
 	return m
 }
 
-// WithDaggerCLIUbuntu sets up the Dagger CLI entry point for Ubuntu within the ModuleTemplate.
+// WithDaggerCLIUbuntu sets up the Dagger CLI entry point for Ubuntu within the {{.module_name}}.
 //
 // Parameters:
 //   - version: The version of the Dagger Engine to use, e.g., "v0.12.7".
