feat: Improve Dagger CLI configuration for module
Update the `WithDaggerCLIAlpine` and `WithDaggerCLIUbuntu` methods in the module template to use the correct module name `{{.module_name}}` instead of the generic `ModuleTemplate`. This ensures the methods return the correct type and improves the usability of the module.

--- a/.daggerx/templates/module/dagger.go.tmpl
+++ b/.daggerx/templates/module/dagger.go.tmpl
@@ -89,8 +89,8 @@ func (m *{{.module_name}}) WithDaggerCLIAlpine(version string) *{{.module_name}}
 //  4. Sets the DAGGER_VERSION environment variable in the container.
 //
 // Returns:
-//   - *ModuleTemplate: Returns the modified ModuleTemplate instance with the Dagger CLI configured.
-func (m *ModuleTemplate) WithDaggerCLIUbuntu(version string) *ModuleTemplate {
+//   - *{{.module_name}}: Returns the modified {{.module_name}} instance with the Dagger CLI configured.
+func (m *{{.module_name}}) WithDaggerCLIUbuntu(version string) *{{.module_name}} {
 	daggerInstallCommand := getDaggerInstallCMDByVersion(version)
 	installDaggerCLI := []string{"bash", "-c", daggerInstallCommand}
 
